fixed alignment output configuration

--- a/BFE_RShiny/flamingo/inst/app/www/css/flamingo-tweaks.css
+++ b/BFE_RShiny/flamingo/inst/app/www/css/flamingo-tweaks.css
@@ -337,6 +337,7 @@ input[type="checkbox"] + span:before {
   width: 16px;
   text-align: center;
   margin-right: 6px;
+  margin-bottom: 5px;
   border: 1px solid black;
   border-radius: 2px;
   background-color: white;
